[gd_scene format=3 uid="uid://cl6dhu44a4w1b"]

[ext_resource type="Script" uid="uid://c33e24wkx5bhq" path="res://Scripts/Dialogue/dialogue_scene.gd" id="1_script"]

[node name="DialogueScene" type="Control" unique_id=1220025058]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="DialogueScene#Background" type="TextureRect" parent="." unique_id=1770053731]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 1

[node name="DialogueScene#CharacterLayer" type="Control" parent="." unique_id=227047848]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueScene_CharacterLayer#PortraitLeft" type="TextureRect" parent="DialogueScene#CharacterLayer" unique_id=2137727595]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -567.0
offset_right = 351.0
offset_bottom = -26.0
grow_vertical = 0
stretch_mode = 1

[node name="DialogueScene_CharacterLayer#PortraitRight" type="TextureRect" parent="DialogueScene#CharacterLayer" unique_id=671619431]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -404.0
offset_top = -536.0
offset_right = -196.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
stretch_mode = 1

[node name="DialogueScene#DialogueUI" type="Control" parent="." unique_id=932967341]
layout_mode = 1
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.1999817
offset_bottom = -5.199951

[node name="DialogueScene_DialogueUI#TextBox" type="Panel" parent="DialogueScene#DialogueUI" unique_id=264748515]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 17.0
offset_right = -32.0
offset_bottom = -11.800049
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueScene_DialogueUI_TextBox#NameLabel" type="Label" parent="DialogueScene#DialogueUI" unique_id=891408017]
layout_mode = 0
offset_left = 33.0
offset_top = -12.0
offset_right = 217.0
offset_bottom = 12.0
text = "Name"
horizontal_alignment = 1

[node name="DialogueScene_DialogueUI_TextBox#DialogueText" type="RichTextLabel" parent="DialogueScene#DialogueUI" unique_id=736936414]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 17.0
offset_right = -31.0
offset_bottom = -16.800049
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueScene_DialogueUI#NextIndicator" type="Label" parent="DialogueScene#DialogueUI" unique_id=2079123516]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -46.80005
offset_right = -29.0
offset_bottom = -22.800049
grow_horizontal = 0
grow_vertical = 0
text = "â–¶"
